some ui updates

--- a/app/static/css/compact-ui.css
+++ b/app/static/css/compact-ui.css
@@ -301,3 +301,14 @@
 #user-dropdown-menu {
     z-index: 40;
 }
+
+.search-bar .compact-input:focus {
+    outline: none;
+    border-color: #3b82f6;
+    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.15);
+}
+
+.search-bar .compact-btn {
+    height: 100%;
+    min-width: 32px;
+}
