--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,9 +48,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet" href="../static/css/custom.css">
-    <link rel="stylesheet" href="../static/css/compact-ui.css">
+    <link rel="stylesheet" href="../static/css/styles.css?v=1.0.2">
+    <link rel="stylesheet" href="../static/css/custom.css?v=1.0.2">
+    <link rel="stylesheet" href="../static/css/compact-ui.css?v=1.0.2">
 
     <style>
         /* Additional responsive CSS utilities */
@@ -829,12 +829,12 @@
 </div>
 
 <!-- Application Script -->
-<script src="../static/js/app.js?v=1.0.1"></script>
-<script src="../static/js/vaata_toimikut.js"></script>
-<script src="../static/js/virtuaaltoimik.js"></script>
-<script src="../static/js/dokumendi_pohjad.js"></script>
-<script src="../static/js/edit.js"></script>
-<script src="../static/js/enhanced-filters.js"></script>
+<script src="../static/js/app.js?v=1.0.2"></script>
+<script src="../static/js/vaata_toimikut.js?v=1.0.2"></script>
+<script src="../static/js/virtuaaltoimik.js?v=1.0.2"></script>
+<script src="../static/js/dokumendi_pohjad.js?v=1.0.2"></script>
+<script src="../static/js/edit.js?v=1.0.2"></script>
+<script src="../static/js/enhanced-filters.js?v=1.0.2"></script>
 
 <!-- Additional script for improved table container sizing -->
 <script>
