--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -836,12 +836,18 @@
 </div>
 
 <!-- Application Script -->
+<script src="{{ versioned_static('js/global-bridge.js') }}"></script>
 <script src="{{ versioned_static('js/app.js') }}"></script>
+<script src="{{ versioned_static('js/modules/core.js') }}"></script>
+<script src="{{ versioned_static('js/modules/ui.js') }}"></script>
+<script src="{{ versioned_static('js/modules/grid.js') }}"></script>
+<script src="{{ versioned_static('js/modules/theme.js') }}"></script>
+<script src="{{ versioned_static('js/edit.js') }}"></script>
+<script src="{{ versioned_static('js/enhanced-filters.js') }}"></script>
 <script src="{{ versioned_static('js/vaata_toimikut.js') }}"></script>
 <script src="{{ versioned_static('js/virtuaaltoimik.js') }}"></script>
 <script src="{{ versioned_static('js/dokumendi_pohjad.js') }}"></script>
-<script src="{{ versioned_static('js/edit.js') }}"></script>
-<script src="{{ versioned_static('js/enhanced-filters.js') }}"></script>
+<script src="{{ versioned_static('js/koosta_dokument.js') }}"></script>
 <script src="{{ versioned_static('js/version-checker.js') }}"></script>
 
 <!-- Additional script for improved table container sizing -->
